Added baseurl to config to allow GitHub Pages to generate

--- a/_layouts/thanks.html
+++ b/_layouts/thanks.html
@@ -14,13 +14,13 @@
     <title>{{ page.title }}</title>
 
     <!-- Bootstrap Core CSS -->
-    <link href="/css/bootstrap.min.css" rel="stylesheet">
+    <link href="{{ site.baseurl }}/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom CSS -->
-    <link href="/css/agency.css" rel="stylesheet">
+    <link href="{{ site.baseurl }}/css/agency.css" rel="stylesheet">
 
     <!-- Custom Fonts -->
-    <link href="/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <link href="{{ site.baseurl }}/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
     <link href='https://fonts.googleapis.com/css?family=Kaushan+Script' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
@@ -47,15 +47,15 @@
   {{ content }}
 
       <!-- jQuery -->
-      <script src="/js/jquery.js"></script>
+      <script src="{{ site.baseurl }}/js/jquery.js"></script>
 
       <!-- Bootstrap Core JavaScript -->
-      <script src="/js/bootstrap.min.js"></script>
+      <script src="{{ site.baseurl }}/js/bootstrap.min.js"></script>
 
       <!-- Plugin JavaScript -->
       <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
-      <script src="/js/classie.js"></script>
-      <script src="/js/cbpAnimatedHeader.js"></script>
+      <script src="{{ site.baseurl }}/js/classie.js"></script>
+      <script src="{{ site.baseurl }}/js/cbpAnimatedHeader.js"></script>
 
 </body>
 
