--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,16 +14,16 @@
     <title>{{ page.title }}</title>
 
     <!-- Bootstrap Core CSS -->
-    <link href="/css/bootstrap.min.css" rel="stylesheet">
+    <link href="{{ site.baseurl }}/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom CSS -->
-    <link href="/css/agency.css" rel="stylesheet">
+    <link href="{{ site.baseurl }}/css/agency.css" rel="stylesheet">
 
     <!-- Favicon -->
     <link rel="shortcut icon" type="image/png" href="/favicon.png">
 
     <!-- Custom Fonts -->
-    <link href="/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <link href="{{ site.baseurl }}/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
     <link href='https://fonts.googleapis.com/css?family=Kaushan+Script' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
@@ -64,24 +64,24 @@
 
 
       <!-- jQuery -->
-      <script src="/js/jquery.js"></script>
+      <script src="{{ site.baseurl }}/js/jquery.js"></script>
 
       <!-- Bootstrap Core JavaScript -->
-      <script src="/js/bootstrap.min.js"></script>
+      <script src="{{ site.baseurl }}/js/bootstrap.min.js"></script>
 
       <!-- Plugin JavaScript -->
       <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
-      <script src="/js/classie.js"></script>
-      <script src="/js/cbpAnimatedHeader.js"></script>
+      <script src="{{ site.baseurl }}/js/classie.js"></script>
+      <script src="{{ site.baseurl }}/js/cbpAnimatedHeader.js"></script>
 
       <!-- Contact Form JavaScript -->
-      <script src="/js/jqBootstrapValidation.js"></script>
+      <script src="{{ site.baseurl }}/js/jqBootstrapValidation.js"></script>
     <!-- hide contact-me.js for testing SB 10/7
       <script src="/js/contact_me.js"></script>
     -->
 
       <!-- Custom Theme JavaScript -->
-      <script src="/js/agency.js"></script>
+      <script src="{{ site.baseurl }}/js/agency.js"></script>
 
 </body>
 
