--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -9,6 +9,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
+            <img src="/img/PARNZ-logo-invert-micro.png" class="pull-left nav-logo" />
             <a class="navbar-brand page-scroll" href="#page-top"
             onclick="dataLayer.push({
               'event': 'nav-click',
